--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,6 +12,10 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
+$typography-font-family : 'Inter', sans-serif !default;
+
 $primary   : #5C35F9;
 $secondary : #26A69A;
 $accent    : #9C27B0;
